# gslib-cpp

./: CMakeLists.txt  LICENSE  README.md
python/: bindings.cpp  test_gslib.py
src/: common.h  cova3.cpp  cova3.h  declus.cpp  declus.h  gamv.cpp  gamv.h  kt3d.cpp  kt3d.h  setrot.cpp  setrot.h  sort.cpp  sort.h  sqdist.cpp  sqdist.h
tests/: test_cova3.cpp  test_declus.cpp  test_gamv.cpp  test_kt3d.cpp  test_numerical.cpp  test_sqdist.cpp
